Upgrade Python version used to publish pip packages

--- a/.github/workflows/build-pip-packages.yml
+++ b/.github/workflows/build-pip-packages.yml
@@ -88,6 +88,9 @@ jobs:
           path: artifacts
           pattern: pip-packages-*
 
+      - name: Setup Python
+        uses: ./.github/actions/setup-python
+
       - name: Publish PIP Package
         run: |
           set -eux
