--- a/cpp/src/Ice/msbuild/ice/ice.vcxproj.filters
+++ b/cpp/src/Ice/msbuild/ice/ice.vcxproj.filters
@@ -402,7 +402,7 @@
     <ClCompile Include="..\..\ReferenceFactory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\RegisterPluginsInit_all.cpp">
+    <ClCompile Include="..\..\AddDefaultPluginFactories_all.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\RequestHandler.cpp">
@@ -934,7 +934,7 @@
     <ClInclude Include="..\..\..\..\include\Ice\ReferenceF.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\include\Ice\RegisterPlugins.h">
+    <ClInclude Include="..\..\..\..\include\Ice\AddDefaultPluginFactories.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\include\Ice\RequestHandlerF.h">
