--- a/.github/actions/build-rpm-package/action.yml
+++ b/.github/actions/build-rpm-package/action.yml
@@ -1,6 +1,12 @@
 name: "Build RPM Package"
 description: "Builds a RPM package using a Docker image"
 inputs:
+  repository_url:
+    description: "The URL of the RPM repository to publish to"
+    required: true
+  repository_suffix:
+    description: "The suffix to append to the repository URL"
+    required: true
   ice_version:
     description: "The Ice version to build"
     required: true
