Modifying java.yml

--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -11,6 +11,9 @@ jobs:
   rewriteCatch:
     runs-on: ubuntu-24.04
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      
       - name: Setup Java
         uses: ./.github/actions/setup-java
 
