--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -18,4 +18,4 @@ jobs:
         uses: ./.github/actions/setup-java
 
       - name: Run rewriteDryRun with build failure enabled
-        run: ./java/gradlew rewriteDryRun -PenableDryRunFail
+        run: cd java | ./gradlew rewriteDryRun -PenableDryRunFail | cd ..
