Added the -PenableCops option.

--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -24,4 +24,4 @@ jobs:
         run: make -C cpp slice2java
 
       - name: Run rewriteDryRun with build failure enabled
-        run: ./java/gradlew rewriteDryRun -PenableDryRunFail --project-dir ./java/
+        run: ./java/gradlew rewriteDryRun -PenableDryRunFail -PenableCops --project-dir ./java/
