--- a/java/build.gradle
+++ b/java/build.gradle
@@ -12,6 +12,9 @@ allprojects {
     }
 }
 
+// Defines and initializes enableCodeAnalysis to the corresponding property in gradle.properties.
+def enableCodeAnalysis = project.property('enableCodeAnalysis').toBoolean()
+
 subprojects {
     project.ext.topSrcDir = "$rootProject.projectDir/.."
 
@@ -47,11 +50,11 @@ subprojects {
     }
 
     // We want Checkstyle to generally run after Rewrite and to exclude files generated from Slice.
-    // You need to use -PenableCops to be able to invoke the checkstyle, rewriteRun, and rewriteDryRun tasks
+    // You need to use -PenableCodeAnalysis to be able to invoke the checkstyle, rewriteRun, and rewriteDryRun tasks
     // The tasks still need to be manually called if nothing else invokes them.
     tasks.withType(Checkstyle) {
         task ->
-            task.enabled = project.hasProperty("enableCops")
+            task.enabled = enableCodeAnalysis
         dependsOn(rewriteDryRun)
         exclude(
             '**/generated/**'
@@ -148,16 +151,17 @@ dependencies {
     )
 }
 
-// Use -PfailOnDryRunResults in the command line to enable failing the project during any operation with rewriteDryRun.
-// You need to use -PenableCops to be able to invoke the checkstyle, rewriteRun, and rewriteDryRun tasks.
+// You need to use -PenableCodeAnalysis to be able to invoke the checkstyle, rewriteRun, and rewriteDryRun tasks.
 // The tasks still need to be manually called if nothing else invokes them.
 tasks.named('rewriteDryRun') {
     task ->
-        task.enabled = project.hasProperty("enableCops")
-    rewrite.failOnDryRunResults = project.hasProperty("failOnDryRunResults")
+        task.enabled = enableCodeAnalysis
+    project.logger.lifecycle(enableCodeAnalysis.toString())
+    project.logger.lifecycle(task.enabled.toString())
+    rewrite.failOnDryRunResults = true
 }
 
 tasks.named('rewriteRun') {
     task ->
-        task.enabled = project.hasProperty("enableCops")
+        task.enabled = enableCodeAnalysis
 }
