--- a/java/gradle.properties
+++ b/java/gradle.properties
@@ -50,3 +50,7 @@ DESTDIR =
 
 # More heap!
 org.gradle.jvmargs = -Xmx1024m
+
+# Changes whether a set of code analysis tasks are enabled. This should be set to false by default.
+# This set includes rewriteRun, rewriteDryRun, and checkstyle.
+enableCodeAnalysis = false
